Prevent text wrap

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -22,10 +22,12 @@
   grid-column: 1 / 3;
   display: grid;
   grid-template-columns: 1fr 4fr;
+  gap: 100px;
 }
 
 .logo {
   justify-self: start;
+  white-space: nowrap;
 }
 
 .menu {
@@ -42,6 +44,8 @@
 .menu ul,
 .menu li {
   font-size: 16px;
+  white-space: nowrap;
+  gap: 16px;
 }
 
 .sidebar {
